--- a/app/src/main/res/layout/fragment_b.xml
+++ b/app/src/main/res/layout/fragment_b.xml
@@ -3,9 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.rez.fragmentanimation.AFragment">
-
-    <!-- TODO: Update blank fragment layout -->
+    tools:context="com.example.rez.fragmentanimation.BFragment">
 
     <ImageView
         android:id="@+id/redBall"
@@ -20,7 +18,7 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintVertical_bias="0.267" />
+        app:layout_constraintVertical_bias="0.498" />
 
     <ImageView
         android:id="@+id/star"
@@ -34,5 +32,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintVertical_bias="0.259" />
+
 </android.support.constraint.ConstraintLayout>
