--- a/app/src/main/res/animator/slide_right.xml
+++ b/app/src/main/res/animator/slide_right.xml
@@ -9,4 +9,9 @@
         android:valueType="floatType"
         />
 
+    <!--
+        Properties that can be animated can be found here:
+            https://developer.android.com/guide/topics/graphics/prop-animation.html#views
+    -->
+
 </set>
