--- a/app/src/main/res/layout/fragment_a.xml
+++ b/app/src/main/res/layout/fragment_a.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.rez.fragmentanimation.AFragment">
+    tools:context="com.example.rez.fragmentanimation.Fragments.AFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
